--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Todo Home</title>
-    <link href="../static/css/style.css" rel="stylesheet">    
-</head>
-<body>
-  <nav>
-    <h1>Example Task List App</h1>
-    <ul>
-      <li class="navlink"><a href="#">Home</a></li>
-      <li class="navlink"><a href="#">View Tasks</a></li>
-      <li class="navlink"><a href="#">New Task</a></li>
-    </ul>
-  </nav>
-  <main>
-    <h1>Home page</h1>
-  </main>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block main %}
+    <p>You have {{ count }} tasks in total. <a href={{ url_for('all_tasks') }}>Click here </a>to view the tasks </p>
+{% endblock %}
